--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,18 +7,42 @@
     color: rgb(255, 255, 255);
     text-align: center;
     padding: 10px;
-    font-size: 30px
+    font-size: 30px;
 }
 
 .main-container {
+    background-image: url('../images/grey.png');
+}
+
+.content-container {
     width: 960px;
-    clear: both;
+    position: relative;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
     width: 960px;
+    height: 60px;
+    position: relative;
+    margin:auto;
 }
 
 nav {
     float: right;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+footer {
+    position: fixed;
+    width:100%;
+    height: 20px;
+    bottom: 0px;
+    background-color: #678;
+    text-align: center;
+    border-top-color: #700;
+    border-top-width: 7px;
+    border-top-style: solid;
+    padding: 18px 0px 0px 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
