--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,55 @@
 .logo {
-    background-color: #456;
+    background-color: #4aaaa5;
     width: 275px;
     float: left;
     height: 40px;
-    font-family: Arial, Helvetica, sans-serif;
     color: rgb(255, 255, 255);
     text-align: center;
     padding: 10px;
-    font-size: 30px;
+}
+
+h1 {
+    font-size:30px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 .main-container {
-    background-image: url('../images/grey.png');
 }
 
 .content-container {
     width: 960px;
+    background-color: #ffffff;
     position: relative;
     margin: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid #dddddd;
 }
 
-header {
+.content-title {
+    color: #4aaaa5;
+    height: 30px;
+    margin: 20px;
+    border-bottom: 3px solid #cccccc;
+    padding-bottom: 15px; 
+}
+
+.header-content {
     width: 960px;
+    margin:auto;
+}
+
+header{
     height: 60px;
     position: relative;
     margin:auto;
+    background-color: #ffffff;
+    border-bottom: 3px solid #cccccc
+
 }
 
 nav {
     float: right;
     font-family: Arial, Helvetica, sans-serif;
+    padding-top: 22px;
 }
 
 footer {
@@ -38,11 +57,41 @@ footer {
     width:100%;
     height: 20px;
     bottom: 0px;
-    background-color: #678;
+    background-color: #666666;
     text-align: center;
-    border-top-color: #700;
-    border-top-width: 7px;
-    border-top-style: solid;
+    border-top: 7px solid #4aaaa5;
     padding: 18px 0px 0px 0px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-image: url('../images/funky-lines.png');
+}
+
+#profile-picture{
+    width:169px;
+    transform: rotate(90deg);
+    float: left;
+}
+
+#content {
+    position: relative;
+    float: left;
+}
+
+.clearfix::after {
+    content:" ";
+    display:block;
+    clear:both;
+}
+
+p {
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+a {
+    color: #777777;
+    padding: 0px 10px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
