--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,9 +74,9 @@ body {
     float: left;
 }
 
-#content {
+.content {
     position: relative;
-    float: left;
+    margin:20px;
 }
 
 .clearfix::after {
@@ -94,4 +94,15 @@ a {
     color: #777777;
     padding: 0px 10px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.project-tile {
+    width: 170px;
+    height: 130px;
+    background-color: #777777;
+}
+
+#project-thumbnail {
+    width:170px;
+    height:130px;
 }
