--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,9 +77,10 @@ body {
 .content {
     position: relative;
     margin:20px;
+    clear: both;
 }
 
-.clearfix::after {
+.clearfix:after {
     content:" ";
     display:block;
     clear:both;
@@ -97,12 +98,24 @@ a {
 }
 
 .project-tile {
-    width: 170px;
-    height: 130px;
-    background-color: #777777;
+    position: relative;
+    padding-right:20px;
+    padding-bottom:20px;
+    float: left;
 }
 
 #project-thumbnail {
-    width:170px;
-    height:130px;
+    width:300px;
+    height:260px;
+}
+
+.project-title {
+    position: absolute;
+    background-color: #4aaaa5;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    width: 300px;
+    font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
+    padding:10px 0px;
+    bottom:30px;
 }
