--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ h1 {
     position: relative;
     margin: auto;
     border: 1px solid #dddddd;
+    margin-top:40px;
 }
 
 .content-title {
@@ -118,4 +119,40 @@ a {
     font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
     padding:10px 0px;
     bottom:30px;
+}
+
+input {
+    display: block;
+    width: 100%;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 5px;
+}
+
+textarea {
+    width: 100%;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    border-color: lightgray;
+    padding: 5px;
+}
+
+h3 {
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding-bottom: 5px;
+}
+
+.input-field {
+    padding-bottom: 10px;
+    margin-right:15px;
+}
+
+button {
+    background-color: #4aaaa5;
+    color: rgb(255, 255, 255);
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 16px;
+    width: 100px;
+    height: 35px;
 }
