--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,36 @@
+header{
+    height: 90px;
+    position: relative;
+    margin:auto;
+    background-color: #ffffff;
+    border-bottom: 3px solid #cccccc
+}
+
 .logo {
     background-color: #4aaaa5;
     width: 275px;
     float: left;
-    height: 40px;
-    color: rgb(255, 255, 255);
+    height: 30px;
+    color: white;
     text-align: center;
-    padding: 10px;
+    padding: 30px;
+}
+
+.header-content {
+    width: 960px;
+    margin:auto;
+}
+
+nav {
+    float: right;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 35px;
+    font-size: 18px;
 }
 
 h1 {
     font-size:30px;
     font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-.main-container {
 }
 
 .content-container {
@@ -28,29 +45,9 @@ h1 {
 .content-title {
     color: #4aaaa5;
     height: 30px;
-    margin: 20px;
+    margin: 30px;
     border-bottom: 3px solid #cccccc;
-    padding-bottom: 15px; 
-}
-
-.header-content {
-    width: 960px;
-    margin:auto;
-}
-
-header{
-    height: 60px;
-    position: relative;
-    margin:auto;
-    background-color: #ffffff;
-    border-bottom: 3px solid #cccccc
-
-}
-
-nav {
-    float: right;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-top: 22px;
+    padding-bottom: 25px; 
 }
 
 footer {
@@ -60,9 +57,11 @@ footer {
     bottom: 0px;
     background-color: #666666;
     text-align: center;
-    border-top: 7px solid #4aaaa5;
-    padding: 18px 0px 0px 0px;
+    border-top: 10px solid #4aaaa5;
+    padding-top: 40px;
+    font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
+    color:white;
 }
 
 body {
@@ -70,14 +69,14 @@ body {
 }
 
 #profile-picture{
-    width:169px;
-    transform: rotate(90deg);
+    width:200px;
     float: left;
+    padding-right: 30px;
 }
 
 .content {
     position: relative;
-    margin:20px;
+    margin:30px;
     clear: both;
 }
 
@@ -90,18 +89,21 @@ body {
 p {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 1.5;
+    padding-bottom: 10px;
 }
 
 a {
     color: #777777;
-    padding: 0px 10px;
+    padding: 0px 16px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    text-decoration: none;
 }
 
 .project-tile {
     position: relative;
-    padding-right:20px;
-    padding-bottom:20px;
+    padding-right:30px;
+    padding-bottom:40px;
     float: left;
 }
 
@@ -113,12 +115,12 @@ a {
 .project-title {
     position: absolute;
     background-color: #4aaaa5;
-    color: rgb(255, 255, 255);
+    color: white;
     text-align: center;
     width: 300px;
     font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
-    padding:10px 0px;
-    bottom:30px;
+    padding:20px 0px;
+    bottom:50px;
 }
 
 input {
@@ -126,7 +128,8 @@ input {
     width: 100%;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    padding: 5px;
+    padding: 10px;
+    font-size: 12px;
 }
 
 textarea {
@@ -134,25 +137,26 @@ textarea {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     border-color: lightgray;
-    padding: 5px;
+    padding: 10px;
 }
 
 h3 {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
 }
 
 .input-field {
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     margin-right:15px;
 }
 
 button {
     background-color: #4aaaa5;
-    color: rgb(255, 255, 255);
+    color: white;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
     width: 100px;
     height: 35px;
+    font-weight: lighter;
 }
